opam-version: "2.0"
name: "compiler_jikken"
synopsis: "Check program for compiler jikken"
authors: [ "Sato, Ryosuke <rsato@is.s.u-tokyo.ac.jp>" ]
maintainer: ["Sato, Ryosuke <rsato@is.s.u-tokyo.ac.jp>"]
homepage: ["https://github.com/ryosu-sato/fl_jikken"]
bug-reports: ["https://github.com/ryosu-sato/fl_jikken/issues"]

depends: [
  "ocaml" {>= "4.13.1"}
  "ocamlfind"
  "batteries"
  "ppx_blob"
  "fileutils"
]

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

install: [
  ["dune" "install"]
]
