opam-version: "2.0"
name: "compiler_jikken"
synopsis: "Checker & archiver for compiler jikken"
authors: [ "Sato, Ryosuke <rsato@is.s.u-tokyo.ac.jp>" ]
maintainer: ["Sato, Ryosuke <rsato@is.s.u-tokyo.ac.jp>"]
homepage: ["https://github.com/ryosu-sato/compiler_jikken"]
bug-reports: ["https://github.com/ryosu-sato/compiler_jikken/issues"]

depends: [
  "ocaml" {>= "4.13.1"}
  "ocamlfind"
  "batteries"
  "fileutils"
]

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

install: [
  ["dune" "install"]
]
