opam-version: "2.0"
name: "compiler_jikken"
version: "v2024.1"
synopsis: "Checker & archiver for compiler jikken"
authors: [ "Ken, Sakayori <sakayori@is.s.u-tokyo.ac.jp>" ]
maintainer: ["Ken, Sakayori <sakayori@is.s.u-tokyo.ac.jp>"]
homepage: ["https://github.com/KenSakayori/compiler_jikken"]
bug-reports: ["https://github.com/KenSakayori/compiler_jikken/issues"]

depends: [
  "ocaml" {>= "4.14.1"}
  "ocamlfind"
  "batteries"
  "fileutils"
]

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

install: [
  ["dune" "install"]
]
